2nd bonus completed

--- a/temp_analysis_bonus_1_starter.ipynb
+++ b/temp_analysis_bonus_1_starter.ipynb
@@ -811,8 +811,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "p-value is very low. It means that there is a differnce in mean tempratures of June and Dec across years."
+    "p-value is very low. It means that there is a differnce in mean tempratures of June and Dec across years and stations."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
